# LeonardoAI

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  example.env  pyproject.toml
.github/workflows/: ci.yml
src/: ai_client.py  config.py  main.py
src/bot/: global_ctx.py  keyboards.py  md_utils.py  telegram_safe.py
src/bot/handlers/: base_handlers.py  consts.py  errors_handler.py  modeling_handlers.py  texts.py
src/bot/internal/: controllers.py  enums.py  lexicon.py  notify_admin.py
src/bot/middlewares/: auth_middleware.py  session_middleware.py  updates_dumper_middleware.py
src/database/: database_connector.py  models.py  tables_helper.py
src/database/crud/: user.py
tests/: conftest.py  test_base_handlers.py  test_feed_update.py  test_md_utils.py  user_factory.py
